--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     }
   },
   "dependencies": {
+    "mustache": "^2.2.1",
     "normalize.css": "^4.1.1",
     "page": "^1.7.1"
   },
@@ -52,6 +53,8 @@
     "jquery": "global:$"
   },
   "browserify": {
-    "transform": [ "browserify-shim" ]
+    "transform": [
+      "browserify-shim"
+    ]
   }
 }
